--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,6 +3,11 @@
   <head>
     <title><%= title %></title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="/javascripts/jq.js"></script>
+	<script>
+	  var socket = io();
+	</script>
   </head>
   <body>
     <h1><%= title %></h1>
