--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,30 @@
 body {
-  padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
-a {
-  color: #00B7FF;
+button {
+  display: block;
+  width: 100%;
+  height: 200px;
+  font-size: 40px;
+}
+button.on {
+	color: black;
+	background: #faa;
+}
+button.off {
+	color: black;
+}
+button.on::before {
+	content: "● ";
+	color: red;
+}
+button.off::before {
+	content: "■ ";
+}
+button.active {
+	cursor: pointer;
+}
+button.me {
+	border:3px solid black;
 }
