--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,6 +5,8 @@
     <script src="/socket.io/socket.io.js"></script>
     <script src="/javascripts/jq.js"></script>
 	<script>
+	$(function () {
+		
 		var id = "<%=name%>".split(" ").join("_");
 
 		var active = false;;
@@ -13,13 +15,13 @@
 		socket.emit('reg', {name: id});
 
 		socket.on('new', function (data) {
-			$("body").append('<button id="' + data.name + '" class="off">'+data.name+'</button>');
+			$("#body").append('<button id="' + data.name + '" class="off">'+data.name+'</button>');
 		});
 
 		socket.on('others', function (data) {
 			for (var i in data) {
 				if (i == id) {
-			  		$("body").prepend('<button id="' + i + '" class="me '+(data[i]?'on':'off')+'">'+i+'</button>');
+			  		$("#body").prepend('<button id="' + i + '" class="me '+(data[i]?'on':'off')+'">'+i+'</button>');
 			  		$("#" + i).click(function (e) {
 			  			e.preventDefault();
 						active = !active;
@@ -29,13 +31,13 @@
 			  		})
 			  		continue;
 				}
-				$("body").append('<button id="' + i + '" class="'+(data[i]?'on':'off')+'">'+i+'</button>');
-				!function (i) {
-					$("#"+i).click(function (e) {
-						e.preventDefault();
-						socket.emit('vib', {name: i});
-					});
-				}(i);
+				$("#body").append('<button id="' + i + '" class="'+(data[i]?'on':'off')+'">'+i+'</button>');
+				
+				$("#"+i).click(function (e) {
+					e.preventDefault();
+					socket.emit('vib', {name: $(this).attr('id')});
+				});
+			
 			}
 		})
 		socket.on('you', function (data) {
@@ -48,16 +50,42 @@
 
 		socket.on('on', function (data) {
 			$("#" + data.name).removeClass('off').addClass('on');
+			window.navigator.vibrate(200);
 		})
 		socket.on('off', function (data) {
 			$("#" + data.name).removeClass('on').addClass('off');
-		})
-		socket.on('vib', function () {
-			console.log("vib");
 			window.navigator.vibrate(200);
 		})
+		socket.on('vib', function () {
+			// console.log("vib");
+			window.navigator.vibrate(100);
+			setTimeout(function () {
+				window.navigator.vibrate(100);
+				setTimeout(function () {
+					window.navigator.vibrate(100);
+				},200);
+			},200);
+		});
+
+		socket.on('num', function (data) {
+			$("#"+data.name).html(data.name + ' [' + data.n + ']');
+		});
+
+		$(".nums").click(function (e) {
+			e.preventDefault();
+			socket.emit('num', {n: $(this).html()});
+			$("#"+id).html(id+" [" + $(this).html() + "]");
+		});
+
+	})
 	</script>
   </head>
   <body>
+  	<div id="body"></div>
+  	<div id="nn">
+  		<button class="nums">1</button>
+  		<button class="nums">2</button>
+  		<button class="nums">3</button>
+  	</div>
   </body>
 </html>
