--- a/views/index.ejs
+++ b/views/index.ejs
@@ -57,14 +57,8 @@
 			window.navigator.vibrate(200);
 		})
 		socket.on('vib', function () {
-			// console.log("vib");
-			window.navigator.vibrate(100);
-			setTimeout(function () {
-				window.navigator.vibrate(100);
-				setTimeout(function () {
-					window.navigator.vibrate(100);
-				},200);
-			},200);
+			console.log("vib");
+			window.navigator.vibrate([200, 200, 200, 200, 200]);
 		});
 
 		socket.on('num', function (data) {
