--- a/views/index.ejs
+++ b/views/index.ejs
@@ -57,8 +57,7 @@
 			window.navigator.vibrate(200);
 		})
 		socket.on('vib', function () {
-			console.log("vib");
-			window.navigator.vibrate([200, 200, 200, 200, 200]);
+			window.navigator.vibrate(200);
 		});
 
 		socket.on('num', function (data) {
